--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
 		  </div>
 		  <div class="map-contacts">
 		    <section>
-			  <h4 class="map-title">Адрес главного офиса и оффлайн магазина:</h4>
+			  <p class="map-title">Адрес главного офиса и оффлайн магазина:</p>
 			    <p><b>ул.Большая Конюшенная, д.19/8, Санкт-Петербург</b></p>
-			  <h4 class="map-title">Для заказов по телефону:</h4>
+			  <p class="map-title">Для заказов по телефону:</p>
 			    <p><b>8-812 450-25-25</b><br>
 				      (c 10 до 20 ежедневно)</p>
 			  <a href="#">Форма обратной связи</a>
